--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "NODE_OPTIONS='--no-experimental-fetch' pnpm vitest run",
     "lint": "next lint",
     "cypress:open": "cypress open",
     "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
@@ -21,7 +22,9 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "antd": "^5.7.3",
     "autoprefixer": "^10.4.14",
+    "lodash": "^4.17.21",
     "next": "^13.4.10",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
@@ -30,12 +33,16 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.2",
     "@testing-library/react-hooks": "^8.0.1",
+    "@types/lodash": "^4.14.196",
     "cypress": "^12.17.1",
     "jsdom": "^22.1.0",
+    "msw": "^1.2.3",
     "node-fetch": "^3.3.1",
     "node-mocks-http": "^1.12.2",
     "start-server-and-test": "^2.0.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "whatwg-fetch": "^3.6.17"
   }
 }
