--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
