--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@types/react-dom": "^18.2.7",
     "antd": "^5.7.3",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "next": "^13.4.10",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
+    "typechat": "^0.0.10",
     "typescript": "5.1.3",
     "zustand": "^4.3.2"
   },
